# tinylog

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  README_zh-CN.md  makefile  tlog.c  tlog.h
example/: CMakeLists.txt  Makefile  example.c  example.cpp
test/: Makefile  test.c
